# TradingViewHook

./: manage.py  pyproject.toml
record/: admin.py  models.py
tradingview_webhook/: asgi.py  settings.py  urls.py  wsgi.py
